<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.generalquiz.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/br2" />

    <EditText
        android:id="@+id/person_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="70dp"
        android:ems="20"
        android:fontFeatureSettings="#000"
        android:hint="@string/name_personal"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/person_name"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:ems="20"
        android:fontFeatureSettings="#000"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />


    <Button
        android:id="@+id/start_button"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailText"
        android:layout_marginLeft="145dp"
        android:layout_marginTop="30dp"
        android:text="@string/start"
        android:textSize="24sp"
        android:textStyle="italic" />

</RelativeLayout>
